[tool.poetry]
name = "dash-share"
version = "0.1.0"
description = "A Dash Library to Facilitate Saving and Sharing Application SState"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dash_share"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
