[tool.poetry]
name = "dash-share"
version = "0.1.0"
description = "A Dash Library to Facilitate Saving and Sharing Application SState"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dash_share"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dash = "^2.0.0"
dash-daq = "^0.5.0"
requests = "^2.27.1"
gunicorn = "^20.1.0"
Pillow = "^9.0.1"
dash-bootstrap-components = "^1.0.3"
pyjanitor = "^0.23.1"
python-dotenv = "^0.20.0"
dash-loading-spinners = "^1.0.0"
neo4j-driver = "^4.4.5"
importlib-resources = "^5.9.0"
scipy = "^1.9.1"
dash-mantine-components = "^0.12.1"
geojson = "^3.0.1"
dash-iconify = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
